ConEmu 160219 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -18,8 +18,8 @@ md5_arc=cf570ed9614c176289b5e9d70d120b78
 md5_exe=5b19e5a45fd81e575b8d1666167f4ac0
 
 [ConEmu_Devel_2]
-version=160218
-location_arc=2384674,x5654D416,https://github.com/Maximus5/ConEmu/releases/download/v16.02.18/ConEmuPack.160218.7z
-location_exe=4674472,xB1277F2C,https://github.com/Maximus5/ConEmu/releases/download/v16.02.18/ConEmuSetup.160218.exe
-md5_arc=11dc0e5ab72eefc144a5899e9f2e7a66
-md5_exe=08571760c21448b160f91884b1ac38d9
+version=160219
+location_arc=2385641,x25028A66,https://github.com/Maximus5/ConEmu/releases/download/v16.02.19/ConEmuPack.160219.7z
+location_exe=4679080,x829DA663,https://github.com/Maximus5/ConEmu/releases/download/v16.02.19/ConEmuSetup.160219.exe
+md5_arc=056c498c41f8ccfcc95bff1ef86e21ad
+md5_exe=c0f23175c4dfe43ce45c18a37b550e23
