Maintain download mirror in version.ini

--- a/version.ini
+++ b/version.ini
@@ -1,5 +1,5 @@
 ; This file is always available online:
-; http://conemu.github.io/version.ini
+; https://conemu.github.io/version.ini
 ; http://www.conemu.ru/version.ini
 ; http://downloads.sf.net/project/conemu/AutoUpdate/version.ini?use_mirror=autoselect
 
@@ -9,6 +9,8 @@ location_arc=2271937,xB6751E1F,https://github.com/Maximus5/ConEmu/releases/downl
 location_exe=4539816,x317A5896,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13g/ConEmuSetup.150813g.exe
 md5_arc=7b214f3d3f32d29345b303979b9e630a
 md5_exe=5cd6b5eb7c91103ac574c8c1a654c19d
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.150813g.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.150813g.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
 version=160211
@@ -16,6 +18,8 @@ location_arc=2381352,xCB8959D6,https://github.com/Maximus5/ConEmu/releases/downl
 location_exe=4661160,x0E0EA4CB,https://github.com/Maximus5/ConEmu/releases/download/v16.02.11/ConEmuSetup.160211.exe
 md5_arc=cf570ed9614c176289b5e9d70d120b78
 md5_exe=5b19e5a45fd81e575b8d1666167f4ac0
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160211.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160211.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
 version=160219
@@ -23,3 +27,5 @@ location_arc=2385641,x25028A66,https://github.com/Maximus5/ConEmu/releases/downl
 location_exe=4679080,x829DA663,https://github.com/Maximus5/ConEmu/releases/download/v16.02.19/ConEmuSetup.160219.exe
 md5_arc=056c498c41f8ccfcc95bff1ef86e21ad
 md5_exe=c0f23175c4dfe43ce45c18a37b550e23
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160219.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160219.exe?use_mirror=autoselect
