ConEmu 160222 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160211.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160211.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160219
-location_arc=2385641,x25028A66,https://github.com/Maximus5/ConEmu/releases/download/v16.02.19/ConEmuPack.160219.7z
-location_exe=4679080,x829DA663,https://github.com/Maximus5/ConEmu/releases/download/v16.02.19/ConEmuSetup.160219.exe
-md5_arc=056c498c41f8ccfcc95bff1ef86e21ad
-md5_exe=c0f23175c4dfe43ce45c18a37b550e23
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160219.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160219.exe?use_mirror=autoselect
+version=160222
+location_arc=2356486,x89686E81,https://github.com/Maximus5/ConEmu/releases/download/v16.02.22/ConEmuPack.160222.7z
+location_exe=4679592,xACD2A358,https://github.com/Maximus5/ConEmu/releases/download/v16.02.22/ConEmuSetup.160222.exe
+md5_arc=8ea28d295f0e068f92844c35af03663b
+md5_exe=47ddd8c745713662c6fa5cb5dfb13871
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160222.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160222.exe?use_mirror=autoselect
