--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.150813g.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.150813g.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=160211
-location_arc=2381352,xCB8959D6,https://github.com/Maximus5/ConEmu/releases/download/v16.02.11/ConEmuPack.160211.7z
-location_exe=4661160,x0E0EA4CB,https://github.com/Maximus5/ConEmu/releases/download/v16.02.11/ConEmuSetup.160211.exe
-md5_arc=cf570ed9614c176289b5e9d70d120b78
-md5_exe=5b19e5a45fd81e575b8d1666167f4ac0
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160211.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160211.exe?use_mirror=autoselect
+version=160228
+location_arc=2359857,x5E94951A,https://github.com/Maximus5/ConEmu/releases/download/v16.02.28/ConEmuPack.160228.7z
+location_exe=4683176,x614F3520,https://github.com/Maximus5/ConEmu/releases/download/v16.02.28/ConEmuSetup.160228.exe
+md5_arc=162832345ee39b8011cb3b19655bdb00
+md5_exe=a32c11a8ef90b70461d99cd5ee89d6de
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160228.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160228.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160222
-location_arc=2356486,x89686E81,https://github.com/Maximus5/ConEmu/releases/download/v16.02.22/ConEmuPack.160222.7z
-location_exe=4679592,xACD2A358,https://github.com/Maximus5/ConEmu/releases/download/v16.02.22/ConEmuSetup.160222.exe
-md5_arc=8ea28d295f0e068f92844c35af03663b
-md5_exe=47ddd8c745713662c6fa5cb5dfb13871
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160222.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160222.exe?use_mirror=autoselect
+version=160228
+location_arc=2359857,x5E94951A,https://github.com/Maximus5/ConEmu/releases/download/v16.02.28/ConEmuPack.160228.7z
+location_exe=4683176,x614F3520,https://github.com/Maximus5/ConEmu/releases/download/v16.02.28/ConEmuSetup.160228.exe
+md5_arc=162832345ee39b8011cb3b19655bdb00
+md5_exe=a32c11a8ef90b70461d99cd5ee89d6de
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160228.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160228.exe?use_mirror=autoselect
