--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.150813g.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.150813g.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=160228
-location_arc=2359857,x5E94951A,https://github.com/Maximus5/ConEmu/releases/download/v16.02.28/ConEmuPack.160228.7z
-location_exe=4683176,x614F3520,https://github.com/Maximus5/ConEmu/releases/download/v16.02.28/ConEmuSetup.160228.exe
-md5_arc=162832345ee39b8011cb3b19655bdb00
-md5_exe=a32c11a8ef90b70461d99cd5ee89d6de
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160228.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160228.exe?use_mirror=autoselect
+version=160301
+location_arc=2362109,xADC42FF8,https://github.com/Maximus5/ConEmu/releases/download/v16.03.01/ConEmuPack.160301.7z
+location_exe=4687784,xCB03229E,https://github.com/Maximus5/ConEmu/releases/download/v16.03.01/ConEmuSetup.160301.exe
+md5_arc=26ef16fd7da3aa4f322ae720e88afdee
+md5_exe=f8fa586818f8982e159222e48ea0d284
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160301.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160301.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160228
-location_arc=2359857,x5E94951A,https://github.com/Maximus5/ConEmu/releases/download/v16.02.28/ConEmuPack.160228.7z
-location_exe=4683176,x614F3520,https://github.com/Maximus5/ConEmu/releases/download/v16.02.28/ConEmuSetup.160228.exe
-md5_arc=162832345ee39b8011cb3b19655bdb00
-md5_exe=a32c11a8ef90b70461d99cd5ee89d6de
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160228.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160228.exe?use_mirror=autoselect
+version=160301
+location_arc=2362109,xADC42FF8,https://github.com/Maximus5/ConEmu/releases/download/v16.03.01/ConEmuPack.160301.7z
+location_exe=4687784,xCB03229E,https://github.com/Maximus5/ConEmu/releases/download/v16.03.01/ConEmuSetup.160301.exe
+md5_arc=26ef16fd7da3aa4f322ae720e88afdee
+md5_exe=f8fa586818f8982e159222e48ea0d284
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160301.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160301.exe?use_mirror=autoselect
