Fix ThirdPartyProblems.html link

--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -596,7 +596,7 @@
     -
       eng: "Third-party problems"
       rus: "Проблемы сторонних приложений"
-      url: "ThirdPartyProblem.html"
+      url: "ThirdPartyProblems.html"
     -
       eng: "Search before post"
       rus: "Используйте поиск"
