--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160301.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160301.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160301
-location_arc=2362109,xADC42FF8,https://github.com/Maximus5/ConEmu/releases/download/v16.03.01/ConEmuPack.160301.7z
-location_exe=4687784,xCB03229E,https://github.com/Maximus5/ConEmu/releases/download/v16.03.01/ConEmuSetup.160301.exe
-md5_arc=26ef16fd7da3aa4f322ae720e88afdee
-md5_exe=f8fa586818f8982e159222e48ea0d284
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160301.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160301.exe?use_mirror=autoselect
+version=160308
+location_arc=2367608,x4685D3A7,https://github.com/Maximus5/ConEmu/releases/download/v16.03.08/ConEmuPack.160308.7z
+location_exe=4693712,xAC4C7B25,https://github.com/Maximus5/ConEmu/releases/download/v16.03.08/ConEmuSetup.160308.exe
+md5_arc=29f52e49df6de91a03821e8919b2c754
+md5_exe=c7d6c2edc3b5f66a1ff50d52516dbfe5
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160308.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160308.exe?use_mirror=autoselect
