ConEmu 160310 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160301.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160301.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160308
-location_arc=2367608,x4685D3A7,https://github.com/Maximus5/ConEmu/releases/download/v16.03.08/ConEmuPack.160308.7z
-location_exe=4693712,xAC4C7B25,https://github.com/Maximus5/ConEmu/releases/download/v16.03.08/ConEmuSetup.160308.exe
-md5_arc=29f52e49df6de91a03821e8919b2c754
-md5_exe=c7d6c2edc3b5f66a1ff50d52516dbfe5
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160308.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160308.exe?use_mirror=autoselect
+version=160310
+location_arc=2585425,x2A9A1009,https://github.com/Maximus5/ConEmu/releases/download/v16.03.10/ConEmuPack.160310.7z
+location_exe=5063376,x2309C484,https://github.com/Maximus5/ConEmu/releases/download/v16.03.10/ConEmuSetup.160310.exe
+md5_arc=260277e3a351356fe7f02fe2c09e7bc3
+md5_exe=36447b63a2f7da765c5b9d4285bc0023
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160310.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160310.exe?use_mirror=autoselect
