--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160301.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160301.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160310
-location_arc=2585425,x2A9A1009,https://github.com/Maximus5/ConEmu/releases/download/v16.03.10/ConEmuPack.160310.7z
-location_exe=5063376,x2309C484,https://github.com/Maximus5/ConEmu/releases/download/v16.03.10/ConEmuSetup.160310.exe
-md5_arc=260277e3a351356fe7f02fe2c09e7bc3
-md5_exe=36447b63a2f7da765c5b9d4285bc0023
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160310.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160310.exe?use_mirror=autoselect
+version=160313
+location_arc=2590382,x4DC474F5,https://github.com/Maximus5/ConEmu/releases/download/v16.03.13/ConEmuPack.160313.7z
+location_exe=5066960,x6AEAF81B,https://github.com/Maximus5/ConEmu/releases/download/v16.03.13/ConEmuSetup.160313.exe
+md5_arc=ece258cd80b8a398a5c75bb8f18ef5c7
+md5_exe=64a3682e891008373dc7dcfdd3f1f5d4
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160313.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160313.exe?use_mirror=autoselect
