ConEmu 160313 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -23,9 +23,9 @@ mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160301.ex
 
 [ConEmu_Devel_2]
 version=160313
-location_arc=2590382,x4DC474F5,https://github.com/Maximus5/ConEmu/releases/download/v16.03.13/ConEmuPack.160313.7z
+location_arc=2590215,x4F468394,https://github.com/Maximus5/ConEmu/releases/download/v16.03.13/ConEmuPack.160313.7z
 location_exe=5066960,x6AEAF81B,https://github.com/Maximus5/ConEmu/releases/download/v16.03.13/ConEmuSetup.160313.exe
-md5_arc=ece258cd80b8a398a5c75bb8f18ef5c7
+md5_arc=d4781e4604be4bdb0f74c0318fbf522c
 md5_exe=64a3682e891008373dc7dcfdd3f1f5d4
 mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160313.7z?use_mirror=autoselect
 mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160313.exe?use_mirror=autoselect
