ConEmu 160324 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160301.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160301.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160313
-location_arc=2590215,x4F468394,https://github.com/Maximus5/ConEmu/releases/download/v16.03.13/ConEmuPack.160313.7z
-location_exe=5066960,x6AEAF81B,https://github.com/Maximus5/ConEmu/releases/download/v16.03.13/ConEmuSetup.160313.exe
-md5_arc=d4781e4604be4bdb0f74c0318fbf522c
-md5_exe=64a3682e891008373dc7dcfdd3f1f5d4
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160313.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160313.exe?use_mirror=autoselect
+version=160324
+location_arc=2653710,x3BDE6CFB,https://github.com/Maximus5/ConEmu/releases/download/v16.03.24/ConEmuPack.160324.7z
+location_exe=5126352,x3E922BE4,https://github.com/Maximus5/ConEmu/releases/download/v16.03.24/ConEmuSetup.160324.exe
+md5_arc=36b0a08847ccf9290228519ac72ea6a9
+md5_exe=5a77ce288aea6a48d4b8b706e23bbe0e
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160324.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160324.exe?use_mirror=autoselect
