ConEmu 160327 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160301.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160301.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160324
-location_arc=2653710,x3BDE6CFB,https://github.com/Maximus5/ConEmu/releases/download/v16.03.24/ConEmuPack.160324.7z
-location_exe=5126352,x3E922BE4,https://github.com/Maximus5/ConEmu/releases/download/v16.03.24/ConEmuSetup.160324.exe
-md5_arc=36b0a08847ccf9290228519ac72ea6a9
-md5_exe=5a77ce288aea6a48d4b8b706e23bbe0e
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160324.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160324.exe?use_mirror=autoselect
+version=160327
+location_arc=2660021,xF5A6519D,https://github.com/Maximus5/ConEmu/releases/download/v16.03.27/ConEmuPack.160327.7z
+location_exe=5133008,x3E8BBE47,https://github.com/Maximus5/ConEmu/releases/download/v16.03.27/ConEmuSetup.160327.exe
+md5_arc=d9d08ee12a1d1b2bfd2e562574bfded1
+md5_exe=9baa96c60eb8ad51c02ab3f9c1956787
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160327.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160327.exe?use_mirror=autoselect
