ConEmu 160329 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160301.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160301.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160328
-location_arc=2659314,xA1128A13,https://github.com/Maximus5/ConEmu/releases/download/v16.03.28/ConEmuPack.160328.7z
-location_exe=5133008,x673C6E8E,https://github.com/Maximus5/ConEmu/releases/download/v16.03.28/ConEmuSetup.160328.exe
-md5_arc=1cee22176f2d1d24dd17721438aa00da
-md5_exe=edecd1622225fe9f6c5f43a523676cb4
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160328.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160328.exe?use_mirror=autoselect
+version=160329
+location_arc=2661882,x85B84FB3,https://github.com/Maximus5/ConEmu/releases/download/v16.03.29/ConEmuPack.160329.7z
+location_exe=5136080,x671F0556,https://github.com/Maximus5/ConEmu/releases/download/v16.03.29/ConEmuSetup.160329.exe
+md5_arc=b0069ca01b2591f8288e0c4d5d2c887e
+md5_exe=c1f3cdb2e49885de2c32085315e15d90
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160329.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160329.exe?use_mirror=autoselect
