ConEmu 160403 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160301.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160301.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160329
-location_arc=2661882,x85B84FB3,https://github.com/Maximus5/ConEmu/releases/download/v16.03.29/ConEmuPack.160329.7z
-location_exe=5136080,x671F0556,https://github.com/Maximus5/ConEmu/releases/download/v16.03.29/ConEmuSetup.160329.exe
-md5_arc=b0069ca01b2591f8288e0c4d5d2c887e
-md5_exe=c1f3cdb2e49885de2c32085315e15d90
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160329.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160329.exe?use_mirror=autoselect
+version=160403
+location_arc=2668661,x5B8FF814,https://github.com/Maximus5/ConEmu/releases/download/v16.04.03/ConEmuPack.160403.7z
+location_exe=5147824,xE08FFCB8,https://github.com/Maximus5/ConEmu/releases/download/v16.04.03/ConEmuSetup.160403.exe
+md5_arc=b1276697df3b5d4dee2da1b5642b8402
+md5_exe=007363a993e767f436252f3b17df0944
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160403.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160403.exe?use_mirror=autoselect
