ConEmu 160411 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160301.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160301.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160403a
-location_arc=2672504,x87EBF583,https://github.com/Maximus5/ConEmu/releases/download/v16.04.03a/ConEmuPack.160403a.7z
-location_exe=5149872,xB33FD5BF,https://github.com/Maximus5/ConEmu/releases/download/v16.04.03a/ConEmuSetup.160403a.exe
-md5_arc=09841393a2c044eeab892a82742ba5d6
-md5_exe=d4e3b881536f1a5e5144ea06143e9756
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160403a.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160403a.exe?use_mirror=autoselect
+version=160411
+location_arc=2758819,x653F906E,https://github.com/Maximus5/ConEmu/releases/download/v16.04.11/ConEmuPack.160411.7z
+location_exe=5382320,x2C3427A1,https://github.com/Maximus5/ConEmu/releases/download/v16.04.11/ConEmuSetup.160411.exe
+md5_arc=31979e67b9d7ded336e11ecb6150eb3a
+md5_exe=864389107eae7ecf0cfa33c7066bf36b
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160411.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160411.exe?use_mirror=autoselect
