ConEmu 160413 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160301.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160301.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160411
-location_arc=2758819,x653F906E,https://github.com/Maximus5/ConEmu/releases/download/v16.04.11/ConEmuPack.160411.7z
-location_exe=5382320,x2C3427A1,https://github.com/Maximus5/ConEmu/releases/download/v16.04.11/ConEmuSetup.160411.exe
-md5_arc=31979e67b9d7ded336e11ecb6150eb3a
-md5_exe=864389107eae7ecf0cfa33c7066bf36b
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160411.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160411.exe?use_mirror=autoselect
+version=160413
+location_arc=2761100,x238B1730,https://github.com/Maximus5/ConEmu/releases/download/v16.04.13/ConEmuPack.160413.7z
+location_exe=5386928,x8F0F14BF,https://github.com/Maximus5/ConEmu/releases/download/v16.04.13/ConEmuSetup.160413.exe
+md5_arc=239275f779b764029e50192528699b96
+md5_exe=b2de14aefa5a29717ea0d8850daf1006
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160413.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160413.exe?use_mirror=autoselect
