ConEmu 160416 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160301.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160301.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160413
-location_arc=2761100,x238B1730,https://github.com/Maximus5/ConEmu/releases/download/v16.04.13/ConEmuPack.160413.7z
-location_exe=5386928,x8F0F14BF,https://github.com/Maximus5/ConEmu/releases/download/v16.04.13/ConEmuSetup.160413.exe
-md5_arc=239275f779b764029e50192528699b96
-md5_exe=b2de14aefa5a29717ea0d8850daf1006
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160413.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160413.exe?use_mirror=autoselect
+version=160416
+location_arc=2766508,xE14D00A7,https://github.com/Maximus5/ConEmu/releases/download/v16.04.16/ConEmuPack.160416.7z
+location_exe=5393072,x074997C8,https://github.com/Maximus5/ConEmu/releases/download/v16.04.16/ConEmuSetup.160416.exe
+md5_arc=c66dd36f020510b31a93aeac0b10c118
+md5_exe=26bf04729f3d41e88f5dd8c2c53c0230
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160416.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160416.exe?use_mirror=autoselect
