--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160301.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160301.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160416
-location_arc=2766508,xE14D00A7,https://github.com/Maximus5/ConEmu/releases/download/v16.04.16/ConEmuPack.160416.7z
-location_exe=5393072,x074997C8,https://github.com/Maximus5/ConEmu/releases/download/v16.04.16/ConEmuSetup.160416.exe
-md5_arc=c66dd36f020510b31a93aeac0b10c118
-md5_exe=26bf04729f3d41e88f5dd8c2c53c0230
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160416.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160416.exe?use_mirror=autoselect
+version=160428
+location_arc=2824264,x83D855DE,https://github.com/Maximus5/ConEmu/releases/download/v16.04.28/ConEmuPack.160428.7z
+location_exe=5460656,x09710DFA,https://github.com/Maximus5/ConEmu/releases/download/v16.04.28/ConEmuSetup.160428.exe
+md5_arc=83f0767819e0e65c9686d834212a0913
+md5_exe=9eae8208fb3f367e990b8d479d34eae8
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160428.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160428.exe?use_mirror=autoselect
