ConEmu 160503 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160301.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160301.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160428
-location_arc=2824264,x83D855DE,https://github.com/Maximus5/ConEmu/releases/download/v16.04.28/ConEmuPack.160428.7z
-location_exe=5460656,x09710DFA,https://github.com/Maximus5/ConEmu/releases/download/v16.04.28/ConEmuSetup.160428.exe
-md5_arc=83f0767819e0e65c9686d834212a0913
-md5_exe=9eae8208fb3f367e990b8d479d34eae8
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160428.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160428.exe?use_mirror=autoselect
+version=160503
+location_arc=2859487,x24AE17DB,https://github.com/Maximus5/ConEmu/releases/download/v16.05.03/ConEmuPack.160503.7z
+location_exe=5497376,xD8910AF5,https://github.com/Maximus5/ConEmu/releases/download/v16.05.03/ConEmuSetup.160503.exe
+md5_arc=c01b9a0cd78244a35f7054cc8ff02066
+md5_exe=f3cacc868f678bc0223838131327e3b5
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160503.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160503.exe?use_mirror=autoselect
