ConEmu 160504 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160301.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160301.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160503
-location_arc=2859487,x24AE17DB,https://github.com/Maximus5/ConEmu/releases/download/v16.05.03/ConEmuPack.160503.7z
-location_exe=5497376,xD8910AF5,https://github.com/Maximus5/ConEmu/releases/download/v16.05.03/ConEmuSetup.160503.exe
-md5_arc=c01b9a0cd78244a35f7054cc8ff02066
-md5_exe=f3cacc868f678bc0223838131327e3b5
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160503.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160503.exe?use_mirror=autoselect
+version=160504
+location_arc=2860447,x5338AC8A,https://github.com/Maximus5/ConEmu/releases/download/v16.05.04/ConEmuPack.160504.7z
+location_exe=5498912,xC812F725,https://github.com/Maximus5/ConEmu/releases/download/v16.05.04/ConEmuSetup.160504.exe
+md5_arc=9ad6cf75823884f343552589057cf768
+md5_exe=58e5ae26361068f04e41e04cb340369c
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160504.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160504.exe?use_mirror=autoselect
