ConEmu 160515 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.150813g.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.150813g.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=160301
-location_arc=2362109,xADC42FF8,https://github.com/Maximus5/ConEmu/releases/download/v16.03.01/ConEmuPack.160301.7z
-location_exe=4687784,xCB03229E,https://github.com/Maximus5/ConEmu/releases/download/v16.03.01/ConEmuSetup.160301.exe
-md5_arc=26ef16fd7da3aa4f322ae720e88afdee
-md5_exe=f8fa586818f8982e159222e48ea0d284
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160301.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160301.exe?use_mirror=autoselect
+version=160515
+location_arc=2831858,xD3930F13,https://github.com/Maximus5/ConEmu/releases/download/v16.05.15/ConEmuPack.160515.7z
+location_exe=5462560,x803A6EEC,https://github.com/Maximus5/ConEmu/releases/download/v16.05.15/ConEmuSetup.160515.exe
+md5_arc=b00dadf1c2bf30f2c2a1e5842c02d88e
+md5_exe=2b5629bce44db3d9e75604ad7c4cf18e
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160515.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160515.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160504
-location_arc=2860447,x5338AC8A,https://github.com/Maximus5/ConEmu/releases/download/v16.05.04/ConEmuPack.160504.7z
-location_exe=5498912,xC812F725,https://github.com/Maximus5/ConEmu/releases/download/v16.05.04/ConEmuSetup.160504.exe
-md5_arc=9ad6cf75823884f343552589057cf768
-md5_exe=58e5ae26361068f04e41e04cb340369c
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.160504.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.160504.exe?use_mirror=autoselect
+version=160515
+location_arc=2831858,xD3930F13,https://github.com/Maximus5/ConEmu/releases/download/v16.05.15/ConEmuPack.160515.7z
+location_exe=5462560,x803A6EEC,https://github.com/Maximus5/ConEmu/releases/download/v16.05.15/ConEmuSetup.160515.exe
+md5_arc=b00dadf1c2bf30f2c2a1e5842c02d88e
+md5_exe=2b5629bce44db3d9e75604ad7c4cf18e
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160515.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160515.exe?use_mirror=autoselect
