--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.150813g.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.150813g.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=160515
-location_arc=2831858,xD3930F13,https://github.com/Maximus5/ConEmu/releases/download/v16.05.15/ConEmuPack.160515.7z
-location_exe=5462560,x803A6EEC,https://github.com/Maximus5/ConEmu/releases/download/v16.05.15/ConEmuSetup.160515.exe
-md5_arc=b00dadf1c2bf30f2c2a1e5842c02d88e
-md5_exe=2b5629bce44db3d9e75604ad7c4cf18e
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160515.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160515.exe?use_mirror=autoselect
+version=160522
+location_arc=2835952,x2E7BC236,https://github.com/Maximus5/ConEmu/releases/download/v16.05.22/ConEmuPack.160522.7z
+location_exe=5469728,xD411D3CD,https://github.com/Maximus5/ConEmu/releases/download/v16.05.22/ConEmuSetup.160522.exe
+md5_arc=0e74484988ed23147e0a5a8095102fff
+md5_exe=cf64c69312d954e8574ec0ff0e38f602
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160522.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160522.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160515
-location_arc=2831858,xD3930F13,https://github.com/Maximus5/ConEmu/releases/download/v16.05.15/ConEmuPack.160515.7z
-location_exe=5462560,x803A6EEC,https://github.com/Maximus5/ConEmu/releases/download/v16.05.15/ConEmuSetup.160515.exe
-md5_arc=b00dadf1c2bf30f2c2a1e5842c02d88e
-md5_exe=2b5629bce44db3d9e75604ad7c4cf18e
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160515.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160515.exe?use_mirror=autoselect
+version=160522
+location_arc=2835952,x2E7BC236,https://github.com/Maximus5/ConEmu/releases/download/v16.05.22/ConEmuPack.160522.7z
+location_exe=5469728,xD411D3CD,https://github.com/Maximus5/ConEmu/releases/download/v16.05.22/ConEmuSetup.160522.exe
+md5_arc=0e74484988ed23147e0a5a8095102fff
+md5_exe=cf64c69312d954e8574ec0ff0e38f602
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160522.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160522.exe?use_mirror=autoselect
