ConEmu 160529 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.150813g.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.150813g.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=160522
-location_arc=2835952,x2E7BC236,https://github.com/Maximus5/ConEmu/releases/download/v16.05.22/ConEmuPack.160522.7z
-location_exe=5469728,xD411D3CD,https://github.com/Maximus5/ConEmu/releases/download/v16.05.22/ConEmuSetup.160522.exe
-md5_arc=0e74484988ed23147e0a5a8095102fff
-md5_exe=cf64c69312d954e8574ec0ff0e38f602
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160522.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160522.exe?use_mirror=autoselect
+version=160529
+location_arc=2839271,x7DE4493A,https://github.com/Maximus5/ConEmu/releases/download/v16.05.29/ConEmuPack.160529.7z
+location_exe=5473824,x544FE470,https://github.com/Maximus5/ConEmu/releases/download/v16.05.29/ConEmuSetup.160529.exe
+md5_arc=a513c0b3081b7455828ff70af18c48d4
+md5_exe=42075c7d19afe1d3d43d8a6ff4f5e88f
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160529.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160529.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160522
-location_arc=2835952,x2E7BC236,https://github.com/Maximus5/ConEmu/releases/download/v16.05.22/ConEmuPack.160522.7z
-location_exe=5469728,xD411D3CD,https://github.com/Maximus5/ConEmu/releases/download/v16.05.22/ConEmuSetup.160522.exe
-md5_arc=0e74484988ed23147e0a5a8095102fff
-md5_exe=cf64c69312d954e8574ec0ff0e38f602
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160522.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160522.exe?use_mirror=autoselect
+version=160529
+location_arc=2839271,x7DE4493A,https://github.com/Maximus5/ConEmu/releases/download/v16.05.29/ConEmuPack.160529.7z
+location_exe=5473824,x544FE470,https://github.com/Maximus5/ConEmu/releases/download/v16.05.29/ConEmuSetup.160529.exe
+md5_arc=a513c0b3081b7455828ff70af18c48d4
+md5_exe=42075c7d19afe1d3d43d8a6ff4f5e88f
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160529.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160529.exe?use_mirror=autoselect
