ConEmu 160605 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.150813g.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.150813g.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=160529
-location_arc=2839271,x7DE4493A,https://github.com/Maximus5/ConEmu/releases/download/v16.05.29/ConEmuPack.160529.7z
-location_exe=5473824,x544FE470,https://github.com/Maximus5/ConEmu/releases/download/v16.05.29/ConEmuSetup.160529.exe
-md5_arc=a513c0b3081b7455828ff70af18c48d4
-md5_exe=42075c7d19afe1d3d43d8a6ff4f5e88f
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160529.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160529.exe?use_mirror=autoselect
+version=160605
+location_arc=2844560,xBFD50B41,https://github.com/Maximus5/ConEmu/releases/download/v16.06.05/ConEmuPack.160605.7z
+location_exe=5478432,x58ABE10F,https://github.com/Maximus5/ConEmu/releases/download/v16.06.05/ConEmuSetup.160605.exe
+md5_arc=0b96a0563bc26d80e00067db7231cbf8
+md5_exe=06e78f9e319f8c39db1178ef5ad637d7
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160605.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160605.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160529
-location_arc=2839271,x7DE4493A,https://github.com/Maximus5/ConEmu/releases/download/v16.05.29/ConEmuPack.160529.7z
-location_exe=5473824,x544FE470,https://github.com/Maximus5/ConEmu/releases/download/v16.05.29/ConEmuSetup.160529.exe
-md5_arc=a513c0b3081b7455828ff70af18c48d4
-md5_exe=42075c7d19afe1d3d43d8a6ff4f5e88f
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160529.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160529.exe?use_mirror=autoselect
+version=160605
+location_arc=2844560,xBFD50B41,https://github.com/Maximus5/ConEmu/releases/download/v16.06.05/ConEmuPack.160605.7z
+location_exe=5478432,x58ABE10F,https://github.com/Maximus5/ConEmu/releases/download/v16.06.05/ConEmuSetup.160605.exe
+md5_arc=0b96a0563bc26d80e00067db7231cbf8
+md5_exe=06e78f9e319f8c39db1178ef5ad637d7
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160605.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160605.exe?use_mirror=autoselect
