ConEmu 160607 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -4,13 +4,13 @@
 ; http://downloads.sf.net/project/conemu/AutoUpdate/version.ini?use_mirror=autoselect
 
 [ConEmu_Stable_2]
-version=150813g
-location_arc=2271937,xB6751E1F,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13g/ConEmuPack.150813g.7z
-location_exe=4539816,x317A5896,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13g/ConEmuSetup.150813g.exe
-md5_arc=7b214f3d3f32d29345b303979b9e630a
-md5_exe=5cd6b5eb7c91103ac574c8c1a654c19d
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.150813g.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.150813g.exe?use_mirror=autoselect
+version=160607
+location_arc=2843575,x37A9E1FC,https://github.com/Maximus5/ConEmu/releases/download/v16.06.07/ConEmuPack.160607.7z
+location_exe=5475872,x19D3FBED,https://github.com/Maximus5/ConEmu/releases/download/v16.06.07/ConEmuSetup.160607.exe
+md5_arc=50aab0998a827c9f3d0efc752a375c12
+md5_exe=f513ff4f0352a1abf81fcda754f622f2
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160607.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160607.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
 version=160605
