ConEmu 160607 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160607.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160607.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=160605
-location_arc=2844560,xBFD50B41,https://github.com/Maximus5/ConEmu/releases/download/v16.06.05/ConEmuPack.160605.7z
-location_exe=5478432,x58ABE10F,https://github.com/Maximus5/ConEmu/releases/download/v16.06.05/ConEmuSetup.160605.exe
-md5_arc=0b96a0563bc26d80e00067db7231cbf8
-md5_exe=06e78f9e319f8c39db1178ef5ad637d7
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160605.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160605.exe?use_mirror=autoselect
+version=160607
+location_arc=2843575,x37A9E1FC,https://github.com/Maximus5/ConEmu/releases/download/v16.06.07/ConEmuPack.160607.7z
+location_exe=5475872,x19D3FBED,https://github.com/Maximus5/ConEmu/releases/download/v16.06.07/ConEmuSetup.160607.exe
+md5_arc=50aab0998a827c9f3d0efc752a375c12
+md5_exe=f513ff4f0352a1abf81fcda754f622f2
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160607.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160607.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160605
-location_arc=2844560,xBFD50B41,https://github.com/Maximus5/ConEmu/releases/download/v16.06.05/ConEmuPack.160605.7z
-location_exe=5478432,x58ABE10F,https://github.com/Maximus5/ConEmu/releases/download/v16.06.05/ConEmuSetup.160605.exe
-md5_arc=0b96a0563bc26d80e00067db7231cbf8
-md5_exe=06e78f9e319f8c39db1178ef5ad637d7
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160605.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160605.exe?use_mirror=autoselect
+version=160607
+location_arc=2843575,x37A9E1FC,https://github.com/Maximus5/ConEmu/releases/download/v16.06.07/ConEmuPack.160607.7z
+location_exe=5475872,x19D3FBED,https://github.com/Maximus5/ConEmu/releases/download/v16.06.07/ConEmuSetup.160607.exe
+md5_arc=50aab0998a827c9f3d0efc752a375c12
+md5_exe=f513ff4f0352a1abf81fcda754f622f2
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160607.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160607.exe?use_mirror=autoselect
