--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160609.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160609.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=160607
-location_arc=2843575,x37A9E1FC,https://github.com/Maximus5/ConEmu/releases/download/v16.06.07/ConEmuPack.160607.7z
-location_exe=5475872,x19D3FBED,https://github.com/Maximus5/ConEmu/releases/download/v16.06.07/ConEmuSetup.160607.exe
-md5_arc=50aab0998a827c9f3d0efc752a375c12
-md5_exe=f513ff4f0352a1abf81fcda754f622f2
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160607.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160607.exe?use_mirror=autoselect
+version=160609
+location_arc=2847888,x293D0ADA,https://github.com/Maximus5/ConEmu/releases/download/v16.06.09/ConEmuPack.160609.7z
+location_exe=5483040,x7FA83ABF,https://github.com/Maximus5/ConEmu/releases/download/v16.06.09/ConEmuSetup.160609.exe
+md5_arc=7dbcff644a0dc7e1e7b59a1b6ca73baa
+md5_exe=68ddbbd6e573c4bb11fb8d9ec23fe945
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160609.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160609.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=160607
-location_arc=2843575,x37A9E1FC,https://github.com/Maximus5/ConEmu/releases/download/v16.06.07/ConEmuPack.160607.7z
-location_exe=5475872,x19D3FBED,https://github.com/Maximus5/ConEmu/releases/download/v16.06.07/ConEmuSetup.160607.exe
-md5_arc=50aab0998a827c9f3d0efc752a375c12
-md5_exe=f513ff4f0352a1abf81fcda754f622f2
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.160607.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.160607.exe?use_mirror=autoselect
+version=160609
+location_arc=2847888,x293D0ADA,https://github.com/Maximus5/ConEmu/releases/download/v16.06.09/ConEmuPack.160609.7z
+location_exe=5483040,x7FA83ABF,https://github.com/Maximus5/ConEmu/releases/download/v16.06.09/ConEmuSetup.160609.exe
+md5_arc=7dbcff644a0dc7e1e7b59a1b6ca73baa
+md5_exe=68ddbbd6e573c4bb11fb8d9ec23fe945
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.160609.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.160609.exe?use_mirror=autoselect
